# charter

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/charter/: __init__.py  api.py
src/charter/charts/: __init__.py  bar.py  base.py  dashboard.py  line.py  pie.py  rose.py  timeseries.py
src/charter/config/: __init__.py  settings.py
src/charter/output/: __init__.py  manager.py
src/charter/styles/: __init__.py  dashboard.py  presets.py  registry.py
src/charter/themes/: __init__.py  base.py  presets.py
src/charter/utils/: __init__.py  downsampling.py  validators.py
